--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<html><head><base href="https://unpkg.com/">
+<html><head><base href="">
 <meta charset="UTF-8">
-<title>Sentence Unscrambling Challenge</title>
+<title>Sentence Unscrambler</title>
 <style>
 * {
     margin: 0;
