--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ button:hover {
 </head>
 <body>
 <div class="container">
-    <h1>Sentence Unscrambling Challenge</h1>
+    <h1>Sentence Unscrambler (General)</h1>
     <p class="subtitle">Finish 5 sentence unscrambling tasks and earn a Pokemon!</p>
     <p class="score">Score: <span id="score">0</span></p>
     <div class="feedback" id="feedback"></div>
