--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html><head><base href="">
+<html>
+<head>
+<base href="">
 <meta charset="UTF-8">
 <title>Sentence Unscrambler</title>
 <style>
@@ -14,19 +16,22 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: white;
+    background-image: url('https://alittlemoreenglish.weebly.com/uploads/2/6/6/3/26638990/gradient-background-soft-colors-blueish-cloud-sky_orig.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     color: white;
     padding: 20px;
 }
 
 .container {
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(26, 42, 108, 0.85);
     backdrop-filter: blur(10px);
     padding: 2rem;
     border-radius: 15px;
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
     text-align: center;
-    background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
     max-width: 800px;
     width: 90%;
 }
@@ -371,4 +376,5 @@ document.addEventListener("DOMContentLoaded", () => {
     resetGame();
 });
 </script>
-</body></html>
+</body>
+</html>
